@@ -304,71 +304,6 @@ $(() => {
       }
     };
   }
-
-  /* Debounce submission of long-running forms and add spinner to give sense of activity */
-  // eslint-disable-next-line func-names
-  $(document).on('click', 'button.button-longrunning', function () {
-    const $self = $(this);
-    const $replacementElem = $('em', $self);
-    const reEnableAfter = 30;
-    const dataName = 'disabledtimeout';
-
-    // eslint-disable-next-line func-names
-    window.cancelSpinner = function () {
-      $self
-        .prop('disabled', '')
-        .removeData(dataName)
-        .removeClass('button-longrunning-active');
-
-      if ($self.data('clicked-text')) {
-        $replacementElem.text($self.data('original-text'));
-      }
-    };
-
-    // If client-side validation is active on this form, and is going to block submission of the
-    // form, don't activate the spinner
-    const form = $self.closest('form').get(0);
-    if (
-      form &&
-      form.checkValidity &&
-      !form.noValidate &&
-      !form.checkValidity()
-    ) {
-      return;
-    }
-
-    // Disabling a button prevents it submitting the form, so disabling
-    // must occur on a brief timeout only after this function returns.
-
-    const timeout = setTimeout(() => {
-      if (!$self.data(dataName)) {
-        // Button re-enables after a timeout to prevent button becoming
-        // permanently un-usable
-        $self.data(
-          dataName,
-          setTimeout(() => {
-            clearTimeout($self.data(dataName));
-
-            // eslint-disable-next-line no-undef
-            cancelSpinner();
-          }, reEnableAfter * 1000),
-        );
-
-        if ($self.data('clicked-text') && $replacementElem.length) {
-          // Save current button text
-          $self.data('original-text', $replacementElem.text());
-
-          $replacementElem.text($self.data('clicked-text'));
-        }
-
-        // Disabling button must be done last: disabled buttons can't be
-        // modified in the normal way, it would seem.
-        $self.addClass('button-longrunning-active').prop('disabled', 'true');
-      }
-
-      clearTimeout(timeout);
-    }, 10);
-  });
 });
 
 // =============================================================================
